# CacheSim

./: .gitignore  CMakeLists.txt  text.cpp  todo.txt
files/: cache_memory.cpp  cache_memory.h  cats.cpp  globals.cpp  globals.h  interp.cpp  interp.h  loclib.cpp  loclib.h  parser.cpp  parser.h  parser_sim.cpp  sim.cpp  sim.h  sim_БЕЗ_КЛАССА.cpp  sim_БЕЗ_КЛАССА.h  test.h
